source/blender/imbuf/intern/anim_movie.c
@@ -719,7 +719,7 @@ static int startffmpeg(struct anim *anim)
                                          anim->x,
                                          anim->y,
                                          AV_PIX_FMT_RGBA,
-                                         SWS_FAST_BILINEAR | SWS_PRINT_INFO | SWS_FULL_CHR_H_INT,
+                                         SWS_BILINEAR | SWS_PRINT_INFO | SWS_FULL_CHR_H_INT,
                                          NULL,
                                          NULL,
                                          NULL);
